# Producto/back-fadebooker/src/interfaces/http/routes/cita.routes.js
@@ -1,15 +1,18 @@
 const express = require('express')
 const router = express.Router()
-const CitaController = require('../controllers/cita.controller')
+const CitaControllerClass = require('../controllers/cita.controller')
 const validateRequest = require('../middlewares/validateRequest')
 const { citaSchema, actualizarEstadoSchema } = require('../../../infraestructure/schemas/cita.schema')
 
-router.post('/', validateRequest({ body: citaSchema }), CitaController.crear)
-router.get('/', CitaController.listar)
-router.get('/disponibilidad', CitaController.checkDisponibilidad)
-router.get('/:id', CitaController.obtenerPorId)
-router.post('/:id/pago-efectivo', CitaController.registrarPagoEfectivo)
-router.put('/:id/estado', validateRequest({ body: actualizarEstadoSchema }), CitaController.cambiarEstado)
-router.delete('/:id', CitaController.eliminar)
+const citaController = new CitaControllerClass();
+
+router.post('/', validateRequest({ body: citaSchema }), citaController.crear)
+router.get('/', citaController.listar)
+router.get('/disponibilidad', citaController.checkDisponibilidad)
+router.get('/:id', citaController.obtenerPorId)
+router.post('/:id/pago-efectivo', citaController.registrarPagoEfectivo)
+router.post('/:id/resena', citaController.crearResena)
+router.put('/:id/estado', validateRequest({ body: actualizarEstadoSchema }), citaController.cambiarEstado)
+router.delete('/:id', citaController.eliminar)
 
 module.exports = router
